...
        if (requireTermsConsent) {
            _termsConsentAccepted.value = accepted
        }
    }

    override val pageTitle: String = "Войти или создать аккаунт"
    override val fieldLabel: String = "Телефон"
    override val inputType: InputFieldType = InputFieldType.Phone
    override val autocomplete: String = "tel"
    override val inputName: String = "tel"
    override val initialInputValue: String = "+7"
    override val primaryButtonText: String = "Продолжить"
    override val secondaryButtonText: String = "Войти по email"
    override val secondaryButtonNavigationPath: String = "/login-by-mail"

    private val _state = MutableStateFlow<AuthFormState>(AuthFormState.Idle)
    override val state: StateFlow<AuthFormState> = _state.asStateFlow()

    private val _validationState = MutableStateFlow<ValidationState>(ValidationState.Error("Введите номер телефона"))
...
