...
            PageHeader {
                TextSmartHeader("Вход по логину и паролю")
            }

            FormSection {
                TextInputField(
                    label = "Логин",
                    value = uiState.login,
                    fitContainerWidth = true,
                    placeholder = "Email или телефон",
                    onValueChange = viewModel::onLoginChanged,
                )

...
                    Div({
                        style { width(100.percent) }
                    }) {
                        ActionButton(
                            viewModel = buttonViewModel,
                            enabledColor = CSSColors.Blue,
                            text = "Войти",
                            onClick = viewModel::submit,
                        )
                    }
                }
            }
        }
...
